payment routes doc
